# freertos_meets_riscv

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c
